[FIX](ALL) - gap removido na divCentral

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -9,7 +9,6 @@
     display: flex;
     flex-direction: column;
     width: 80%;
-    gap: 3vw;
     padding-left: 3vw;
 }
 
